콘솔 커맨드 호환 완성